Version 0.8.5~dev

	* Set default check_poll to 60, closes: #3336.
	* New fix for race condition causing duplicate
	  logging output, closes: #3202.

Version 0.8.4 Released on 2010/10/04

	* Fix race condition which causes double/triple logging output,
	  closes: #3532.
	* sjconf: read all [spvd:*] sections, not just [spvd], closes #3498.
	* Do not provide spv-inject since it moved to webengine-spv module.
	* Do not stop daemon on extra configuration section presence.
	* Simplify configuration parsing code, refs: #3308.
	* Catch plugins not declaring optional parameters, refs: #3308.
	* Move optional default parameters to BasePlugin, closes: #3070 and
	  refs: #3308.
	* Make plugin configuration inheritance work again, closes: #3308.

Version 0.8.3 Released on 2010/07/07

	* Add a SJConf plugin, closes: #3304.

Version 0.8.2 Released on 2010/07/02

	* sample: plugin updated with new API, closes: #2984.
	* sample: add alternate plugin using getattr.
	* Change logrotate options for rotating daily and keep 30 days of logs,
	  closes: #3147.
	* basejob: Protected code against null values.
	* basejob: fix crash on first run of a specific job
	* Remove: spv-data.

Version 0.8.1 Released on 2010/05/17

	* Move status infos in old_status_infos variable to avoid having to
	  always push all status infos to spv webservices when check is
	  complete.

Version 0.8.0 Released on 2010/05/12

	* Added 'limit_group' and 'limit_check' parameter to allow multiple
	  instances of spvd to work on identical DB but different groups and
	  checks.
	* Limit number of results to commit at the same time (default 50).
	  Configration value is 'limit_commit'.
	* Allow to limit plugins to several groups.
	* Save history only when job is finished and new status differs from
	  previously saved status.
	* Overhaul logging in BaseJob and BasePlugin to reduce file descriptor
	  usage and fix "broken" log output, closes: #3057.

Version 0.7.0 Released on 2010/04/21
